[tool.poetry]
name = "tweetle"
version = "0.1.0"
description = "A python CLI to control your twitter account"
authors = ["4RCAN3"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.3"
certifi = "^2020.12.5"
chardet = "^4.0.0"
click = "^7.1.2"
idna = "^3.1"
importlib-metadata = "^3.7.3"
mysql-connector-python = "^8.0.23"
oauthlib = "^3.1.0"
prettytable = "^2.1.0"
protobuf = "^3.15.6"
PySocks = "^1.7.1"
python-dotenv = "^0.15.0"
requests-oauthlib = "^1.3.0"
six = "^1.15.0"
soupsieve = "^2.2.1"
tweepy = "^3.10.0"
typing-extensions = "^3.7.4"
urllib3 = "^1.26.4"
wcwidth = "^0.2.5"
zipp = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
