[tool.poetry]
name = "tweetle"
version = "0.1.0"
description = "A python based cli to control your twitter account and get analytical data"
authors = ["ARC4N3 <arcaneisc00l@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
certifi = "^2020.12.5"
chardet = "^4.0.0"
click = "^7.1.2"
art = "^5.1"
ascii_graph = "^1.5.1"
ascii-magic = "^1.5.5"
colorama = "^0.4.4"
mysql-connector-python = "^8.0.23"
oauthlib = "^3.1.0"
Pillow = "^8.2.0"
prettytable = "^2.1.0"
PySocks = "^1.7.1"
python-dotenv = "^0.17.0"
requests = "^2.25.1"
idna = "2.10"
requests-oauthlib = "^1.3.0"
six = "^1.15.0"
stdiomask = "^0.0.6"
urllib3 = "^1.26.4"
wcwidth = "^0.2.5"
setuptools = "^56.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "poetry-core>=1.0.0"
]
build-backend = "poetry.core.masonry.api"
